--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,8 @@
 language: php
 
 php:
-    - '5.6'
     - '7.0'
 
 install:
     - composer self-update
-    - composer update --no-interaction
+    - composer install --no-interaction
