--- a/.travis.yml
+++ b/.travis.yml
@@ -6,3 +6,7 @@ php:
 install:
     - composer self-update
     - composer install --no-interaction
+
+script:
+    - vendor/bin/phpcs --standard=psr2 src tests
+    - vendor/bin/phpunit
